fixed range slider bug