@@ -119,6 +119,9 @@ application {
                                  "--add-opens", "javafx.graphics/javafx.stage=ALL-UNNAMED",
                                  "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED",
                                  "--add-opens", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
+                                 "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+                                 "--add-opens", "javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED",
+                                 "--add-opens", "javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
                                  "--add-opens", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"]
 }
 
